--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,11 @@ ul {
   list-style: none;
 }
 
-h1,h2,h3,p{
-    margin: 0;
+h1,
+h2,
+h3,
+p {
+  margin: 0;
 }
 
 .link {
@@ -59,21 +62,21 @@ h1,h2,h3,p{
 
 /* СТИЛІЗАЦІЯ HEADER  */
 header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
 
   padding-top: 20px;
   padding-bottom: 20px;
 
-  background-color: rgb(133 122 122);
+  background-color: rgba(133 122 122);
 }
 
-.header-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 767px) {
@@ -89,7 +92,7 @@ header {
 }
 
 .mobile-button {
-position: relative;
+  position: relative;
 
   width: 40px;
   height: 25px;
@@ -100,39 +103,41 @@ position: relative;
 }
 
 .mobile-button::before,
-.mobile-button::after{
-    content: " ";
-    position: absolute;
-left: 0;
+.mobile-button::after {
+  content: " ";
+  position: absolute;
+  left: 0;
 
-    width: 100%;
-    height: 3px;
-    background-color: #ffffff;
-    border-radius: 10px;
+  width: 100%;
+  height: 3px;
+  background-color: #ffffff;
+  border-radius: 10px;
 }
 
-.mobile-button::before{
- top: 0;
+.mobile-button::before {
+  top: 0;
 }
 
-.mobile-button::after{
- bottom: 0;
+.mobile-button::after {
+  bottom: 0;
 }
 
-.mobile-button>span{
-    position: absolute;
-top: 11px;
+.mobile-button > span {
+  position: absolute;
+  top: 11px;
+  left: 0;
+
   height: 3px;
   width: 100%;
-  display: block;
-   background-color:  #ffffff;
-   border-radius: 10px;
+
+  background-color: #ffffff;
+  border-radius: 10px;
 }
 
 /* СТИЛІЗАЦІЯ HERO  */
 
 .hero {
-padding-top: 65px;
+  padding-top: 65px;
 
   background-color: rgb(229, 140, 140);
 }
