--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Roboto", sans-serif;
-}
+
+      background-color: #ccc;
+   }
 
 .visually-hidden {
   position: absolute;
@@ -33,6 +35,12 @@ p {
   text-decoration: none;
 }
 
+img{
+  display: block;
+    max-width: 100%;
+    height: auto;
+}
+  
 .button {
   padding: 0;
   border: none;
@@ -67,10 +75,11 @@ header {
   top: 0;
   left: 0;
 
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 
   background-color: rgba(133 122 122);
+  z-index: 9;
 }
 
 .header-container {
@@ -94,8 +103,8 @@ header {
 .mobile-button {
   position: relative;
 
-  width: 40px;
-  height: 25px;
+  width: 30px;
+  height: 20px;
 
   display: block;
 
@@ -109,7 +118,7 @@ header {
   left: 0;
 
   width: 100%;
-  height: 3px;
+  height: 2px;
   background-color: #ffffff;
   border-radius: 10px;
 }
@@ -124,10 +133,10 @@ header {
 
 .mobile-button > span {
   position: absolute;
-  top: 11px;
+  top: 9px;
   left: 0;
 
-  height: 3px;
+  height: 2px;
   width: 100%;
 
   background-color: #ffffff;
@@ -137,11 +146,87 @@ header {
 /* СТИЛІЗАЦІЯ HERO  */
 
 .hero {
-  padding-top: 65px;
-
-  background-color: rgb(229, 140, 140);
+  padding-top: 90px;
+padding-bottom: 30px;
 }
 
-.benefits {
-  background-color: rgb(99, 99, 54);
+.hero-title{
+  margin-bottom: 40px;
+
+  text-align: center;
+  color: #708383;
 }
+
+.hero-title>.after-title{
+margin-top: 10px;
+
+  font-size: 14px;
+
+  display: block;
+
+     color: #7c6c6c;
+}
+
+.hero-button{
+  padding: 10px 5px;
+  width: 200px;
+
+    background-color: #7f6b6b;
+    border: 1px solid #8383cc;
+  border-radius: 10px;
+  color: #ffffff;
+}
+
+
+/* СТИЛІЗАЦІЯ BENEFITS  */
+.list-benefits{
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.img-text{
+  position: relative;
+  overflow: hidden;
+}
+
+.benefits-img{
+  transform: scale(1);
+  transition: transform 250ms linear;
+}
+
+.img-text:hover .benefits-img,
+.img-text:focus .benefits-img{
+ transform: scale(1.5);
+}
+
+.benefits-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+padding: 15px;
+
+display: flex;
+align-items: center;justify-content: center;
+
+width: 100%;
+height: 100%;
+
+font-weight: 600;
+font-size: 18px;
+text-align: center;
+
+ color: #ffffff;
+ background-color: rgba(49, 46, 46, 0.9);
+
+ opacity: 0;
+
+ transition: opacity 250ms linear 250ms;
+}
+
+.img-text:hover .benefits-text,
+.img-text:focus .benefits-text{
+  opacity: 1;
+}
+
