--- a/css/style.css
+++ b/css/style.css
@@ -109,13 +109,17 @@ header {
   }
 }
 
+.link-logo {
+  font-size: 19px;
+
+  color: #ffffff;
+}
+
 @media screen and (max-width: 767px) {
   .list-communication {
     display: none;
   }
 }
-
-
 
 /* СТИЛІЗАЦІЯ HERO  */
 
@@ -215,6 +219,46 @@ header {
   opacity: 1;
 }
 
+/* СТИЛІЗАЦІЯ OUR CUSTOMERS  */
+.our-customers {
+  padding-bottom: 30px;
+  padding-top: 20px;
+}
+
+.customers-item {
+  padding: 5px;
+
+  border: 1px solid white;
+  border-radius: 30px;
+}
+
+.customers-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.our.customers {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.customers-quantity {
+  margin-bottom: 10px;
+
+  font-size: 40px;
+  font-weight: 600;
+
+  text-align: center;
+  color: #ffffff;
+}
+
+.customers-subtitle {
+  font-size: 18px;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
 /* СТИЛІЗАЦІЯ OUR-EMPLOYEES */
 .our-employees {
   padding-top: 20px;
@@ -248,6 +292,40 @@ header {
   background-color: #0e4f63;
 }
 
+/* СТИЛІЗАЦІЯ ABOUT US  */
+.about-us {
+  padding-top: 20px;
+  padding-bottom: 30px;
+
+  background-color: #7d686b;
+}
+
+.about-us .text-head {
+  margin-bottom: 20px;
+
+  color: #ffffff;
+}
+
+.text-head > .link-head {
+  font-style: italic;
+  font-weight: 500;
+  font-size: 17px;
+
+  color: currentColor;
+}
+
+.about-description {
+  padding: 10px;
+  margin-bottom: 20px;
+
+  max-height: 120px;
+
+  overflow: auto;
+  border: 1px solid rgb(223 195 195);
+  border-radius: 20px;
+  color: #ffffff;
+}
+
 /* СТИЛІЗАЦІЯ CONNECTION-FORM  */
 .connection-form {
   padding-top: 20px;
@@ -256,7 +334,8 @@ header {
 
 .personal-data {
   padding: 20px;
-  margin-right: auto;margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
 
   max-width: 350px;
 
@@ -281,18 +360,18 @@ header {
   gap: 15px;
 }
 
-.label-form{
+.label-form {
   font-size: 17px;
   font-weight: 600;
 
-color: rgb(82, 77, 77);;
+  color: rgb(82, 77, 77);
 }
 
 .form-input {
   padding-left: 10px;
 
   height: 30px;
-width: 100%;
+  width: 100%;
 
   font-size: 17px;
 
@@ -311,7 +390,7 @@ width: 100%;
   border-color: rgb(143, 4, 4);
 }
 
-.form-input::placeholder{
+.form-input::placeholder {
   color: rgb(82, 77, 77, 0.5);
   font-weight: 500;
 }
@@ -321,53 +400,61 @@ width: 100%;
   margin-left: auto;
 
   display: block;
-  }
-
-
-/* СТИЛІЗАЦІЯ OUR CUSTOMERS  */
-.customers-item{
-  padding: 5px;
-
-      border: 1px solid white;
-    border-radius: 30px;
 }
 
-.customers-item:not(:last-child){
-  margin-bottom: 20px;
+/* СТИЛІЗАЦІЯ FOOTER  */
+.footer {
+  padding-top: 20px;
+  padding-bottom: 30px;
+
+  background-color: #636357;
 }
 
-.our.customers{
+.logo-footer {
+  margin-bottom: 30px;
+
+  display: block;
+}
+
+.copyright {
+  font-size: 19px;
+
+  color: #ffffff;
+}
+
+.index-confidential {
+  color: currentColor;
+}
+
+
+/* СТИЛІЗАЦІЯ POLITIC CONFILENTIAL  */
+.confidential{
  padding-top: 10px;
- padding-bottom: 20px;
+ padding-bottom: 10px;  
 }
 
-.customers-quantity{
+.link-back{
 margin-bottom: 10px;
 
-  font-size: 40px;
-  font-weight: 600;
-  
-  text-align: center;
-  color: #ffffff;
+display: block;
+
+color: #342d2d;
 }
 
-.customers-subtitle{
-  font-size: 18px;
-
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+.confidential-text{
+ color: #342d2d;
 }
 
-  /* МОБІЛЬНЕ МЕНЮ  */
+
+/* МОБІЛЬНЕ МЕНЮ  */
 .menu-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 40px 30px 30px 30px ;
-      background-color: #473d3d;
+  padding: 40px 30px 30px 30px;
+  background-color: #473d3d;
   z-index: 999;
 
   transform: translateX(100%);
@@ -375,7 +462,7 @@ margin-bottom: 10px;
 }
 
 .menu-toggle {
-   position: relative;
+  position: relative;
 
   width: 30px;
   height: 20px;
@@ -384,7 +471,7 @@ margin-bottom: 10px;
   padding: 0;
   border: none;
   background-color: transparent;
-   border-radius: 50%;
+  border-radius: 50%;
 
   cursor: pointer;
 }
@@ -442,7 +529,7 @@ margin-bottom: 10px;
   color: #fff;
 }
 
-.mobile-menu-item{
+.mobile-menu-item {
   margin-bottom: 20px;
 }
 
