--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
   font-family: "Roboto", sans-serif;
 
   background-color: #ccc;
+
+  text-align: center;
 }
 
 .visually-hidden {
@@ -131,32 +133,38 @@ header {
   gap: 10px;
 }
 
-@media screen and (min-width:768px) and (max-width:1199px) {
-  .nav-list{
-   max-width: 160px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-list {
+    max-width: 160px;
 
-   flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 }
 
-.list-lang{
+.list-lang {
   display: flex;
   gap: 5px;
 }
 
-.link-lang{
-padding: 5px;
+.link-lang {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-color: #ffffff;
-border: 1px solid #ffffff;
+  width: 25px;
+  height: 25px;
+
+  color: #ffffff;
+  border: 1px solid #ffffff;
 }
 
-.link-lang.disabled{
-background-color: transparent;
+.link-lang.disabled {
+  background-color: transparent;
+  cursor: not-allowed;
 }
 
-.link-lang.enabled{
-background-color: green;
+.link-lang.enabled {
+  background-color: green;
 }
 
 .link-header {
@@ -191,14 +199,23 @@ background-color: green;
 .hero {
   padding-top: 90px;
   padding-bottom: 30px;
+
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.1),
+      rgba(47, 48, 58, 0.9)
+    ),
+    url("../images/bg-hero.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
 }
 
 .hero-title {
   margin-bottom: 40px;
 
   font-size: 34px;
-  text-align: center;
-  color: #708383;
+
+  color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
@@ -214,7 +231,7 @@ background-color: green;
 
   display: block;
 
-  color: #7c6c6c;
+  color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
@@ -225,6 +242,8 @@ background-color: green;
 
 .link-hero {
   padding: 10px 40px;
+  margin-right: auto;
+  margin-left: auto;
 
   display: block;
 
@@ -249,6 +268,7 @@ background-color: green;
 
 /* СТИЛІЗАЦІЯ BENEFITS  */
 .benefits {
+  padding-top: 20px;
   padding-bottom: 40px;
 }
 
@@ -315,7 +335,6 @@ background-color: green;
 
   font-weight: 600;
   font-size: 18px;
-  text-align: center;
 
   color: #ffffff;
   background-color: rgba(49, 46, 46, 0.9);
@@ -331,8 +350,7 @@ background-color: green;
   }
 }
 
-.img-text:hover .benefits-text,
-.img-text:focus .benefits-text {
+.benefits-text.visible {
   opacity: 1;
 }
 
@@ -380,14 +398,12 @@ background-color: green;
   font-size: 40px;
   font-weight: 600;
 
-  text-align: center;
   color: #ffffff;
 }
 
 .customers-subtitle {
   font-size: 18px;
 
-  text-align: center;
   text-transform: uppercase;
   color: #ffffff;
 }
@@ -406,6 +422,9 @@ background-color: green;
 
 .item-employees {
   position: relative;
+
+  max-width: 450px;
+  max-height: 280px;
 }
 
 .text-employees {
@@ -417,9 +436,7 @@ background-color: green;
 
   width: 100%;
 
-  font-size: 17px;
-
-  text-align: center;
+  font-size: 14px;
 
   color: #ffffff;
   background-color: #0e4f63;
@@ -482,7 +499,6 @@ background-color: green;
   display: block;
 
   font-size: 19px;
-  text-align: center;
 }
 
 .form-field {
@@ -595,14 +611,15 @@ background-color: green;
 .menu-toggle {
   position: relative;
 
+  padding: 0;
+
+  display: block;
+
   width: 30px;
   height: 20px;
 
-  display: block;
-  padding: 0;
   border: none;
   background-color: transparent;
-  border-radius: 50%;
 
   cursor: pointer;
 }
@@ -669,7 +686,6 @@ background-color: green;
 }
 
 /* СТИЛІ ДЛЯ НІМЕЦЬКОМОВНОЇ СТОРІНКИ  */
-.link-hero.german-hero{
+.link-hero.german-hero {
   width: 280px;
 }
-
