--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ header {
 
 /* СТИЛІЗАЦІЯ BENEFITS  */
 .benefits {
-  padding-top: 20px;
+  padding-top: 45px;
   padding-bottom: 40px;
 }
 
@@ -358,16 +358,16 @@ header {
 .our-customers {
   padding-bottom: 30px;
   padding-top: 70px;
-      background-image: linear-gradient(
+  background-image: linear-gradient(
       rgba(47, 48, 58, 0.5),
       rgba(47, 48, 58, 0.5)
-    ),url("../images/bg-customers.jpg");   
-    
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
-}
+    ),
+    url("../images/bg-customers.jpg");
 
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
 @media screen and (min-width: 768px) {
   .customers-list {
@@ -419,7 +419,7 @@ background-repeat: no-repeat;
 
 /* СТИЛІЗАЦІЯ EMPLOYEES */
 .our-employees {
-  padding-top: 20px;
+  padding-top: 45px;
   padding-bottom: 30px;
 
   background-color: #888872;
@@ -433,7 +433,6 @@ background-repeat: no-repeat;
   position: relative;
 
   max-width: 450px;
-  max-height: 280px;
 }
 
 .text-employees {
@@ -453,7 +452,7 @@ background-repeat: no-repeat;
 
 /* СТИЛІЗАЦІЯ ABOUT US  */
 .about-us {
-  padding-top: 20px;
+  padding-top: 45px;
   padding-bottom: 30px;
 
   background-color: #7d686b;
@@ -473,15 +472,13 @@ background-repeat: no-repeat;
   color: currentColor;
 }
 
-iframe{
-margin-bottom: 10px;
-
-width: 450px;
-height: 450px;
+iframe {
+  width: 450px;
+  height: 450px;
 }
 
-.text-map{
-  color:#FFFFFF;
+.text-map {
+  color: #ffffff;
 }
 
 .about-description {
@@ -564,21 +561,20 @@ height: 450px;
   font-weight: 500;
 }
 
-.form-checkbox{
--webkit-appearance: none;
-appearance: none;
+.form-checkbox {
+  -webkit-appearance: none;
+  appearance: none;
 
+  width: 20px;
+  height: 20px;
 
-    width: 20px;
-    height: 20px;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
 
-    border: 2px solid #ffffff;
-    border-radius: 5px;
- 
-       vertical-align: middle;
-    }
+  vertical-align: middle;
+}
 
-.form-checkbox:checked{
+.form-checkbox:checked {
   background-image: url("../images/full-check.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -586,13 +582,49 @@ appearance: none;
   background-origin: border-box;
 
   background-color: rgb(82, 77, 77, 0.5);
- }
+}
+
+.form-policy {
+  margin-bottom: 20px;
+
+  display: block;
+}
 
 .button-form {
   margin-right: auto;
   margin-left: auto;
 
   display: block;
+}
+
+/* СТИЛІЗАЦІЯ MESSENGERS  */
+.messengers {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.list-messengers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.item-messengers {
+  width: 40px;
+  height: 40px;
+}
+
+.link-messengers {
+  width: 100%;
+  height: 100%;
+
+  display: block;
+}
+
+.icon-messengers {
+  width: 100%;
+  height: 100%;
 }
 
 /* СТИЛІЗАЦІЯ FOOTER  */
@@ -603,9 +635,13 @@ appearance: none;
   background-color: #636357;
 }
 
-.logo-footer {
-  margin-bottom: 30px;
+.container-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.logo-footer {
   display: block;
 }
 
@@ -644,9 +680,15 @@ appearance: none;
   position: fixed;
   top: 0;
   left: 0;
+
+  padding: 40px 30px 30px 30px;
+
   width: 100vw;
   height: 100vh;
-  padding: 40px 30px 30px 30px;
+
+display: flex;
+flex-direction: column;
+
   background-color: #473d3d;
   z-index: 999;
 
@@ -731,7 +773,19 @@ appearance: none;
   color: #fff;
 }
 
+.list-mob-communication{
+margin-top: auto;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.link-mob-communication{
+  color: #ffffff;
+}
+
 /* СТИЛІ ДЛЯ НІМЕЦЬКОМОВНОЇ СТОРІНКИ  */
 .link-hero.german-hero {
- padding: 10px 25px;
+  padding: 10px 25px;
 }
