--- a/css/style.css
+++ b/css/style.css
@@ -476,9 +476,26 @@ padding: 5px;
   color: currentColor;
 }
 
-iframe {
-  max-width: 450px;
-  height: 450px;
+.wrapper-iframe{
+  position: relative;
+
+  padding-top: 56.25%; 
+
+  max-width: 450px; 
+  width: 100%; 
+
+  overflow: hidden;
+}
+
+.wrapper-iframe iframe {
+    position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  
+  border: 0;
 }
 
 .text-map {
